--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -29,6 +29,10 @@
     <dependencies>
         <dependency>
             <groupId>org.jline</groupId>
+            <artifactId>jline-terminal-ffm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
             <artifactId>jline-terminal-jansi</artifactId>
         </dependency>
         <dependency>
