--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        java: [ '11', '21' ]
+        java: [ '21' ]
     steps:
       - uses: actions/checkout@v2
 
