--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        os: [ ubuntu-latest, ubuntu-20.04, windows-latest, macos-latest ]
         java: [ '21' ]
     steps:
       - uses: actions/checkout@v2
