--- a/native/Makefile.common
+++ b/native/Makefile.common
@@ -42,7 +42,7 @@ Linux-x86_LIBNAME   := libjlinenative.so
 Linux-x86_64_CC        := $(CROSS_PREFIX)gcc
 Linux-x86_64_STRIP     := $(CROSS_PREFIX)strip
 Linux-x86_64_CCFLAGS   := -I$(JAVA_HOME)/include -Itarget/inc -Itarget/inc/unix -Os -fPIC -m64 -fvisibility=hidden
-Linux-x86_64_LINKFLAGS := -shared -static-libgcc
+Linux-x86_64_LINKFLAGS := -shared -static-libgcc -lutil -u openpty
 Linux-x86_64_LIBNAME   := libjlinenative.so
 
 Linux-arm_CC          := $(CROSS_PREFIX)gcc
